syntax = 'proto3';
package api;
option go_package = "github.com/armadaproject/armada/pkg/api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


service Executor {
  rpc UpsertExecutorSettings (ExecutorSettingsUpsertRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      put: "/v1/executor_settings/{name}"
      body: "*"
    };
  }
  rpc DeleteExecutorSettings (ExecutorSettingsDeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/v1/executor_settings/{name}"
      body: "*"
    };
  }
  rpc PreemptOnExecutor (ExecutorPreemptRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/executor/preempt/{name}"
      body: "*"
    };
  }
  rpc CancelOnExecutor (ExecutorCancelRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/executor/cancel/{name}"
      body: "*"
    };
  }
}

message ExecutorSettingsUpsertRequest {
  string name = 1;
  bool cordoned = 2;
  string cordonReason = 3;
}

message ExecutorSettingsDeleteRequest {
  string name = 1;
}

message ExecutorPreemptRequest {
  string name = 1;
  // We select jobs to preempt on the executor based on the provided Select message
  oneof Select {
    ByPriorityClass priorityClasses = 2;
    ByPriorityQueue queues = 3;
  }
}

message ExecutorCancelRequest {
  string name = 1;
  // We select jobs on the executor to cancel based on the provided Select message
  oneof Select {
    ByPriorityClass priorityClasses = 2;
    ByPriorityQueue queues = 3;
  }
}

message ByPriorityClass {
  repeated string priorityClasses = 1;
}

message ByPriorityQueue {
  repeated string queues = 1;
}
